--- a/trunk/UI/cli/ncurses/Makefile.am
+++ b/trunk/UI/cli/ncurses/Makefile.am
@@ -1,3 +1,5 @@
+if BUILDCLI
+
 bin_PROGRAMS = btgncli
 
 btgncli_SOURCES = nconfig.cpp \
@@ -52,3 +54,5 @@ INCLUDES = -I$(top_srcdir)
 
 man1_MANS  = btgncli.man
 EXTRA_DIST = btgncli.man
+
+endif # BUILDCLI
