--- a/trunk/UI/gui/viewer/sdl/Makefile.am
+++ b/trunk/UI/gui/viewer/sdl/Makefile.am
@@ -9,7 +9,7 @@ btgvs_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/external/ini/libini.la \
                 $(top_builddir)/bcore/libbtgcore.la
 
-btgvs_LDFLAGS  = @LIBS@ -l@BOOST_DATE_TIME_LIB@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ -l@BOOST_PROGRAM_OPTIONS_LIB@ -l@BOOST_THREAD_LIB@ @AGAR_LIBS@
+btgvs_LDFLAGS  = @LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_DATE_TIME_LIB@ @BOOST_IOSTREAMS_LIB@ @BOOST_FILESYSTEM_LIB@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@ @AGAR_LIBS@
 
 btgvs_CXXFLAGS = @CXXFLAGS@ @LIBGNUTLS_CFLAGS@ @AGAR_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
