--- a/trunk/bcore/client/Makefile.am
+++ b/trunk/bcore/client/Makefile.am
@@ -33,6 +33,6 @@ urlhelper.h filephelper.h
 
 libbtgclient_la_CFLAGS   = @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_REV="@BTG_REV@"
 libbtgclient_la_CXXFLAGS = @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_REV="@BTG_REV@"
-libbtgclient_la_LIBADD   = -l@BOOST_PROGRAM_OPTIONS_LIB@
+libbtgclient_la_LIBADD   = @BOOST_PROGRAM_OPTIONS_LIB@ @BOOST_THREAD_LIB@
 
 INCLUDES             = -I$(top_srcdir)
