--- a/trunk/doc/commands/Makefile.am
+++ b/trunk/doc/commands/Makefile.am
@@ -11,7 +11,7 @@ noinst_HEADERS       = ext_printer.h
 gen_cmd_docs_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                        $(top_builddir)/external/ini/libini.la
 
-gen_cmd_docs_LDFLAGS = @LIBS@ @LIBTORRENT_LIBS@ -l@BOOST_IOSTREAMS_LIB@ -l@BOOST_PROGRAM_OPTIONS_LIB@ @LIBGNUTLS_LIBS@ 
+gen_cmd_docs_LDFLAGS = @LIBS@ @LIBTORRENT_LIBS@ @BOOST_IOSTREAMS_LIB@ @BOOST_PROGRAM_OPTIONS_LIB@ @LIBGNUTLS_LIBS@ 
 
 gen_cmd_docs_CFLAGS   = @CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ \
