--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -36,7 +36,7 @@ AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 AC_PROG_LIBTOOL
 dnl AM_PROG_LIBTOOL
-PKG_PROG_PKG_CONFIG(0.15)
+PKG_PROG_PKG_CONFIG([0.20]) dnl generally can be used any version
 
 dnl FBsd wants special paths
 case "${target}" in
@@ -58,37 +58,7 @@ case "${target}" in
                 ;;
 esac
 
-# execinfo detection
-AC_MSG_CHECKING([for execinfo (backtrace* functions) in libc])
-AC_TRY_LINK([
-	#include <execinfo.h>
-],[
-	backtrace(0, 0);
-	backtrace_symbols(0, 0);
-	return 0;
-],[
-	AC_MSG_RESULT([yes])
-	AC_DEFINE([HAVE_EXECINFO],[1],[Execinfo detected and can be used.])
-],[
-	AC_MSG_RESULT([no])
-	SAVE_LIBS=$LIBS
-	LIBS="$LIBS -lexecinfo"
-	AC_MSG_CHECKING([for execinfo in libexecinfo])
-	AC_TRY_LINK([
-		#include <execinfo.h>
-	],[
-		backtrace(0, 0);
-		backtrace_symbols(0, 0);
-		return 0;
-	],[
-		AC_MSG_RESULT([yes])
-		AC_DEFINE([HAVE_EXECINFO],[1],[Execinfo detected and can be used.])
-	],[
-		AC_MSG_RESULT([no])
-		LIBS=$SAVE_LIBS
-	])
-])
-
+BTG_EXECINFO_CHECK
 
 dnl Used in the script in the script directory.
 AC_PATH_PROGS(BASH, bash)
@@ -206,25 +176,14 @@ fi
 
 AC_CACHE_SAVE
 
-PKG_PROG_PKG_CONFIG([0.20])
-
 dnl Check for Libtorrent.
-
-dnl Use the settings from the libtorrent pkg-config configuration
-dnl file.
-PKG_CHECK_MODULES(LIBTORRENT, libtorrent >= 0.12)
-AC_SUBST(LIBTORRENT_CFLAGS)
-AC_SUBST(LIBTORRENT_LIBS)
+RBLIBTORRENT
 
 AC_MSG_NOTICE([Using libtorrent CFLAGS: $LIBTORRENT_CFLAGS])
 AC_MSG_NOTICE([Using libtorrent LIBS  : $LIBTORRENT_LIBS])
 
-dnl Find the libtorrent headers and try to compile and link a simple
-dnl program.
-RBLIBTORRENT
 
-AC_ARG_ENABLE(btg-config,
-[  --enable-btg-config     generate btg-config script.],
+AC_ARG_ENABLE(btg-config, AC_HELP_STRING([--enable-btg-config], [generate btg-config script]),
 [case "${enableval}" in
 yes) gen_btg_config=true ;;
 no)  gen_btg_config=false ;;
@@ -247,8 +206,7 @@ AC_CACHE_SAVE
 
 dnl Argument: build the gui.
 
-AC_ARG_ENABLE(gui,
-[  --enable-gui            build gtkmm gui client.],
+AC_ARG_ENABLE(gui, AC_HELP_STRING([--enable-gui],[build gtkmm gui client]),
 [case "${enableval}" in
 yes) buildgui=true ;;
 no)  buildgui=false ;;
@@ -258,8 +216,7 @@ AM_CONDITIONAL(BUILDGUI, test x$buildgui = xtrue)
 
 dnl Argument: build the AGAR/SDL viewer.
 
-AC_ARG_ENABLE(viewer,
-[  --enable-viewer         build AGAR viewer.],
+AC_ARG_ENABLE(viewer, AC_HELP_STRING([--enable-viewer], [build AGAR viewer]),
 [case "${enableval}" in
 yes) buildviewer=true ;;
 no)  buildviewer=false ;;
@@ -269,8 +226,7 @@ AM_CONDITIONAL(BUILDVIEWER, test x$buildviewer = xtrue)
 
 dnl Argument: build the cli.
 
-AC_ARG_ENABLE(cli,
-[  --enable-cli            build ncurses client.],
+AC_ARG_ENABLE(cli, AC_HELP_STRING([--enable-cli], [build ncurses client]),
 [case "${enableval}" in
 yes) buildcli=true ;;
 no)  buildcli=false ;;
@@ -280,8 +236,7 @@ AM_CONDITIONAL(BUILDCLI, test x$buildcli = xtrue)
 
 dnl Argument: build the www ui.
 
-AC_ARG_ENABLE(www,
-[  --enable-www            install www client.],
+AC_ARG_ENABLE(www, AC_HELP_STRING([--enable-www], [install www client]),
 [case "${enableval}" in
 yes) buildwww=true ;;
 no)  buildwww=false ;;
@@ -291,8 +246,7 @@ AM_CONDITIONAL(BUILDWWW, test x$buildwww = xtrue)
 
 dnl Argument: debug information.
 
-AC_ARG_ENABLE(debug,
-[  --enable-debug          enable debug output.],
+AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug], [enable debug output]),
 [case "${enableval}" in
 yes) enabledebug=true ;;
 no)  enabledebug=false ;;
@@ -301,8 +255,7 @@ esac],[enabledebug=false])
 
 dnl Argument: build unittests.
 
-AC_ARG_ENABLE(unittest,
-[  --enable-unittest       enable unittesting.],
+AC_ARG_ENABLE(unittest, AC_HELP_STRING([--enable-unittest], [enable unittesting]),
 [case "${enableval}" in
 yes) enableunittest=true ;;
 no)  enableunittest=false ;;
@@ -312,8 +265,7 @@ AM_CONDITIONAL(BTG_UNITTEST, test x$enableunittest = xtrue)
 
 dnl Argument: enable session-saving.
 
-AC_ARG_ENABLE(session-saving,
-[  --enable-session-saving enable session-saving in daemon.],
+AC_ARG_ENABLE(session-saving, AC_HELP_STRING([--enable-session-saving], [enable session-saving in daemon]),
 [case "${enableval}" in
 yes) enablesessionsaving=true ;;
 no)  enablesessionsaving=false ;;
@@ -322,98 +274,36 @@ esac],[enablesessionsaving=false])
 
 dnl Argument: enable event-callback.
 
-AC_ARG_ENABLE(event-callback,
-[  --enable-event-callback enable calling a script or executable for certain events.],
+AC_ARG_ENABLE(event-callback, AC_HELP_STRING([--enable-event-callback], [enable calling a script or executable for certain events]),
 [case "${enableval}" in
 yes) enableeventcallback=true ;;
 no)  enableeventcallback=false ;;
 *) AC_MSG_ERROR(bad value ${enableval} for --enable-event-callback) ;;
 esac],[enableeventcallback=false])
 
-AC_ARG_ENABLE(upnp,
-[  --enable-upnp           enable the use of UPNP (Cyberlink or native libtorrent implementation).],
+AC_ARG_ENABLE(upnp, AC_HELP_STRING([--enable-upnp], [enable the use of UPNP (Cyberlink or native libtorrent implementation)]),
 [case "${enableval}" in
 yes) enableupnp=true ;;
 no)  enableupnp=false ;;
 *) AC_MSG_ERROR(bad value ${enableval} for --enable-upnp) ;;
 esac],[enableupnp=false])
 
-AC_ARG_ENABLE(url,
-[  --enable-url            enable URL downloading using CURL.],
+AC_ARG_ENABLE(url, AC_HELP_STRING([--enable-url], [enable URL downloading using CURL]),
 [case "${enableval}" in
 yes) enableurl=true ;;
 no)  enableurl=false ;;
 *) AC_MSG_ERROR(bad value ${enableval} for --enable-event-callback) ;;
 esac],[enableurl=false])
 
-AC_ARG_ENABLE(command-list,
-[  --enable-command-list   enable generating a command list. Internal option.],
+AC_ARG_ENABLE(command-list, AC_HELP_STRING([--enable-command-list], [enable generating a command list. Internal option]),
 [case "${enableval}" in
 yes) enablecommandlist=true ;;
 no)  enablecommandlist=false ;;
 *) AC_MSG_ERROR(bad value ${enableval} for --enable-command-list) ;;
 esac],[enablecommandlist=false])
 
-dnl 
-
-BTG_OPTION_USECYBERLINK=0
-AC_SUBST(BTG_OPTION_USECYBERLINK)
-AM_CONDITIONAL(BUILDCYBERLINK, false)
-BTG_OPTION_USELTUPNP=0
-AC_SUBST(BTG_OPTION_USELTUPNP)
-AM_CONDITIONAL(BUILDLTUPNP, false)
-
-if $enableupnp ; then
-
-AC_MSG_CHECKING([for libtorrent UPnP])
-AC_TRY_LINK([
-#include <libtorrent/upnp.hpp>
-],[
-#if (LIBTORRENT_VERSION_MAJOR == 0) && (LIBTORRENT_VERSION_MINOR == 14)
-libtorrent::upnp upnp;
-#else
-#error "LT version < 0.14 - doesn't support UPnP"
-#endif
-return 0;
-],[
-   BTG_OPTION_USELTUPNP=1
-   AM_CONDITIONAL(BUILDLTUPNP, true)
-   AC_MSG_RESULT([yes])
-],[
-   AC_MSG_RESULT([no])
-
-   AC_ARG_WITH(cyberlink-include,
-   [  --with-cyberlink-include=PATH  path to Cyberlink header files],
-   [
-      CYBERLINK_CFLAGS="$CFLAGS -I${withval} -DHAVE_SOCKLEN_T"
-      AC_SUBST(CYBERLINK_CFLAGS)
-
-      AM_CONDITIONAL(BUILDCYBERLINK, true)
-      BTG_OPTION_USECYBERLINK=1
-   ])
-
-   AC_ARG_WITH(cyberlink-lib,
-   [  --with-cyberlink-lib=PATH  path to Cyberlink libraries],
-   [
-      CYBERLINK_LIBS="-L${withval} ${withval}/libclink.a -lxerces-c -lxerces-depdom"
-      AC_SUBST(CYBERLINK_LIBS)
-
-      AM_CONDITIONAL(BUILDCYBERLINK, true)
-      BTG_OPTION_USECYBERLINK=1
-   ])
-
-   if test "$BTG_OPTION_USECYBERLINK" -ne "1" ; then
-      dnl try to detect our one
-      PKG_CHECK_MODULES(CYBERLINK, [libclinkcc], [
-         AM_CONDITIONAL(BUILDCYBERLINK, true)
-         BTG_OPTION_USECYBERLINK=1
-         CYBERLINK_CFLAGS="$CYBERLINK_CFLAGS -DHAVE_SOCKLEN_T"
-      ], [ AC_MSG_NOTICE([can't find CyberLink library ($CYBERLINK_PKG_ERRORS)]) ])
-   fi
-
-]); dnl AC_TRY_LINK LT-UPnP
-
-fi dnl if $enableupnp
+dnl Use it after libtorrent detection
+BTG_UPNP_CHECK
 
 AC_MSG_CHECKING([whether debug information should be included])
 if test "$enabledebug" == "true"; then
