RBLIBTORRENT macro renamed to BTG_RBLIBTORRENT_CHECK

--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -177,7 +177,7 @@ fi
 AC_CACHE_SAVE
 
 dnl Check for Libtorrent.
-RBLIBTORRENT
+BTG_RBLIBTORRENT_CHECK
 
 AC_MSG_NOTICE([Using libtorrent CFLAGS: $LIBTORRENT_CFLAGS])
 AC_MSG_NOTICE([Using libtorrent LIBS  : $LIBTORRENT_LIBS])
