--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -134,11 +134,37 @@ fi
 
 AM_LIBGNUTLS_VERSION
 
+# Work-around for new BOOST detection macros
+# we should point it to the dirs where to search libs
+if test -z "$BOOST_LDFLAGS" ; then
+	# default locations
+	AC_MSG_NOTICE([Perhaps you need to set BOOST_LDFLAGS to specify where to search for your BOOST libs.])
+	for BOOST_libdir in /usr/local/boost*/lib /usr/local/lib /usr/boost*/lib /usr/lib; do
+		AC_MSG_CHECKING([BOOST libs in $BOOST_libdir])
+		for BOOST_lib in $BOOST_libdir/libboost* ; do
+			if test -r "$BOOST_lib" ; then
+				AC_MSG_RESULT([found])
+				BOOST_LDFLAGS="-L$BOOST_libdir"
+				break
+			else
+				AC_MSG_RESULT([no])
+				break
+			fi
+		done
+		test -n "$BOOST_LDFLAGS" && break
+	done
+	if test -z "$BOOST_LDFLAGS" ; then
+		AC_MSG_ERROR([Unable to find where BOOST libraries is. You should set BOOST_LDFLAGS manually.])
+	fi
+fi
+AC_MSG_NOTICE([Using BOOST_LDFLAGS = $BOOST_LDFLAGS])
+LDFLAGS="$LDFLAGS $BOOST_LDFLAGS"
+
 AX_BOOST_SYSTEM
 dnl check that Boost.System was found:
 if test -z "$BOOST_SYSTEM_LIB"; then
    dnl AC_MSG_ERROR([unable to find Boost.System library, currently this is required.])
-   AC_MSG_NOTICE(["unable to find Boost.System library, this is not required unless boost 1.3.5 or better is used."])
+   AC_MSG_NOTICE([unable to find Boost.System library, this is not required unless boost 1.3.5 or better is used.])
    BOOST_SYSTEM_LIB=""
    AC_SUBST(BOOST_SYSTEM_LIB)
 fi
@@ -148,7 +174,6 @@ dnl check that Boost.IOStreams was found:
 if test -z "$BOOST_IOSTREAMS_LIB"; then
    AC_MSG_ERROR([unable to find Boost.IOStreams library, currently this is required.])
 fi
-
 
 AX_BOOST_FILESYSTEM
 dnl check that Boost.Filesystem was found:
@@ -176,7 +201,7 @@ fi
 
 AC_CACHE_SAVE
 
-dnl Check for Libtorrent.
+dnl Check for Rasterbar Libtorrent.
 BTG_RBLIBTORRENT_CHECK
 
 AC_MSG_NOTICE([Using libtorrent CFLAGS: $LIBTORRENT_CFLAGS])
