--- a/trunk/daemon/Makefile.am
+++ b/trunk/daemon/Makefile.am
@@ -52,6 +52,7 @@ libdaemon_la_CFLAGS   = @CFLAGS@ @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
+-DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
 -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
 -DBTG_REV="@BTG_REV@" $(URL_DEFINES)
 
@@ -59,6 +60,7 @@ libdaemon_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
 -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
 -DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
+-DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
 -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
 -DBTG_REV="@BTG_REV@" $(URL_DEFINES)
 
@@ -90,12 +92,16 @@ btgdaemon_LDFLAGS = @LIBS@ @LIBTORRENT_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_IOSTREAMS
 btgdaemon_CFLAGS   = @CFLAGS@   @DEBUG_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
--DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES)
+-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
+-DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
+-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES)
 
 btgdaemon_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
 -DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
--DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ -DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES)
+-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
+-DBTG_OPTION_USELTUPNP=@BTG_OPTION_USELTUPNP@ \
+-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ $(URL_DEFINES)
 
 INCLUDES = @LIBTORRENT_CFLAGS@ -I$(top_srcdir)
 
