--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -36,7 +36,7 @@ AC_PROG_INSTALL
 AC_PROG_MAKE_SET
 AC_PROG_LIBTOOL
 dnl AM_PROG_LIBTOOL
-PKG_PROG_PKG_CONFIG([0.20]) dnl generally can be used any version
+PKG_PROG_PKG_CONFIG([0.9.0]) dnl generally can be used any version
 
 dnl FBsd wants special paths
 case "${target}" in
@@ -139,10 +139,10 @@ AM_LIBGNUTLS_VERSION
 if test -z "$BOOST_LDFLAGS" ; then
 	# default locations
 	AC_MSG_NOTICE([Perhaps you need to set BOOST_LDFLAGS to specify where to search for your BOOST libs.])
-	for BOOST_libdir in /usr/local/boost*/lib /usr/local/lib /usr/boost*/lib /usr/lib; do
+	for BOOST_libdir in /usr/local/boost*/lib /usr/local/lib /usr/boost*/lib /usr/lib ; do
 		AC_MSG_CHECKING([BOOST libs in $BOOST_libdir])
 		for BOOST_lib in $BOOST_libdir/libboost* ; do
-			if test -r "$BOOST_lib" ; then
+		if test -r "$BOOST_lib" ; then
 				AC_MSG_RESULT([found])
 				BOOST_LDFLAGS="-L$BOOST_libdir"
 				break
@@ -159,6 +159,26 @@ if test -z "$BOOST_LDFLAGS" ; then
 fi
 AC_MSG_NOTICE([Using BOOST_LDFLAGS = $BOOST_LDFLAGS])
 LDFLAGS="$LDFLAGS $BOOST_LDFLAGS"
+# the same for includes
+if test -z "$BOOST_CPPFLAGS" ; then
+	# default locations
+	AC_MSG_NOTICE([Perhaps you need to set BOOST_CPPFLAGS to specify where to search for your BOOST includes.])
+	for BOOST_incdir in /usr/local/boost*/include /usr/local/boost*/include/boost* /usr/local/include /usr/local/include/boost* /usr/boost*/include /usr/boost*/include/boost* /usr/include /usr/include/boost* ; do
+		AC_MSG_CHECKING([BOOST includes in $BOOST_incdir])
+		if test -r "$BOOST_incdir/boost/config.hpp" ; then
+			AC_MSG_RESULT([found])
+			BOOST_CPPFLAGS="-I$BOOST_incdir"
+		else
+			AC_MSG_RESULT([no])
+		fi
+		test -n "$BOOST_CPPFLAGS" && break
+	done
+	if test -z "$BOOST_CPPFLAGS" ; then
+		AC_MSG_ERROR([Unable to find where BOOST includes is. You should set BOOST_CPPFLAGS manually.])
+	fi
+fi
+AC_MSG_NOTICE([Using BOOST_CPPFLAGS = $BOOST_CPPFLAGS])
+CPPFLAGS="$CPPFLAGS $BOOST_CPPFLAGS"
 
 AX_BOOST_SYSTEM
 dnl check that Boost.System was found:
@@ -282,7 +302,11 @@ dnl Argument: build unittests.
 
 AC_ARG_ENABLE(unittest, AC_HELP_STRING([--enable-unittest], [enable unittesting]),
 [case "${enableval}" in
-yes) enableunittest=true ;;
+yes) 
+	enableunittest=true
+	test -z "$BTG_TEST_HTTPADDR" && BTG_TEST_HTTPADDR="http://127.0.0.1/"
+	AC_DEFINE_UNQUOTED([TEST_HTTPADDR],["$BTG_TEST_HTTPADDR"],[HTTP server address for httpmgr unittests.])
+	;;
 no)  enableunittest=false ;;
 *) AC_MSG_ERROR(bad value ${enableval} for --enable-unittest) ;;
 esac],[enableunittest=false])
