doxygen generation framework for buildbot

--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -6,7 +6,8 @@ all:
 
 doxygen:
 	@echo "Generating docs with doxygen.."
-	doxygen
+	rm -Rf $(srcdir)/doxygen
+	cd $(srcdir) && doxygen && echo Documentation ready in $(srcdir)/doxygen
 
 clean:
 	@rm -fr doxygen
