change of url progress response: transfer values in t_uint instead of t_float removed gtkmm < 2.6 support added semtimedop function detection (FreeBSD6 hasn't it) using common humanReadable* stuff in url loading progress dialog,  removed unneded (duplicate) function Util::valueUnit

--- a/trunk/UI/gui/Makefile.am
+++ b/trunk/UI/gui/Makefile.am
@@ -24,7 +24,7 @@ mainmodel.h mainmenubar.h mainstatusbar.h maintreeview.h \
 peermodel.h peertreeview.h \
 detailsmodel.h detailstreeview.h \
 mainwindow.h sig_button_menu.h \
-gtkmm_ver.h usermessage.h guiutils.h
+usermessage.h guiutils.h
 
 btgui_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                 $(top_builddir)/bcore/client/libbtgclient.la \
