--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -38,6 +38,9 @@ AC_PROG_LIBTOOL
 dnl AM_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG([0.9.0]) dnl generally can be used any version
 
+dnl actually for tests
+AC_CHECK_FUNCS([semop semtimedop])
+
 dnl FBsd wants special paths
 case "${target}" in
 	*-*-freebsd7* | *-*-freebsd8*)
@@ -377,11 +380,7 @@ AC_SUBST(BTG_DEBUG)
 AC_MSG_CHECKING([whether the GUI should be built])
 if test "$buildgui" == "true"; then
         AC_MSG_RESULT([yes])
-        PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.4.8)
-        AC_SUBST(GTKMM_CFLAGS)
-        AC_SUBST(GTKMM_LIBS)
-
-        AC_CHECK_HEADERS(gtkmmconfig.h)
+        PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.6.0)
 else
         AC_MSG_RESULT([no])
 fi
