pre-release fixes: btg-daemon.init: increased daemon termination wait timeout to 1 minute btg-daemon.preinst: more fancy existing config file backup reporting Makefile.am: added build.sh to the dist context.cpp: LT-12 compilation fix, comments peertreeview.cpp: more algorithmic code mainmodel.h: missed comment for class member mainwindow.cpp: increased the visible range y 1 - more ergonomic look buildbot.sh: added Fails/Warnings/Errors counters to the subject

--- a/trunk/debian/Makefile.am
+++ b/trunk/debian/Makefile.am
@@ -1,5 +1,6 @@
 EXTRA_DIST = \
 	README \
+	build.sh \
 	extra/etc/btg/client.ini extra/etc/btg/daemon.ini extra/etc/btg/config.php \
 	extra/var/lib/btg/auth \
 	compat \
