--- a/trunk/daemon/Makefile.am
+++ b/trunk/daemon/Makefile.am
@@ -87,7 +87,7 @@ btgdaemon_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
 
 btgdaemon_LDFLAGS = @LIBS@ @LIBTORRENT_LIBS@ @BOOST_SYSTEM_LIB@ @BOOST_IOSTREAMS_LIB@ \
                     @LIBGNUTLS_LIBS@ @BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ \
-                    @BOOST_PROGRAM_OPTIONS_LIB@ $(URL_LIBS) $(CYBERLINKLDFLAGS)
+                    @BOOST_PROGRAM_OPTIONS_LIB@ @XMLRPC_LDFLAGS@ $(URL_LIBS) $(CYBERLINKLDFLAGS)
 
 btgdaemon_CFLAGS   = @CFLAGS@   @DEBUG_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
 -DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
