--- a/trunk/configure.in
+++ b/trunk/configure.in
@@ -38,6 +38,20 @@ AC_PROG_LIBTOOL
 dnl AM_PROG_LIBTOOL
 PKG_PROG_PKG_CONFIG([0.9.0]) dnl generally can be used any version
 
+XMLRPC_CHECK
+
+if test -z "$XMLRPC_LDFLAGS" ; then
+  AC_MSG_NOTICE([Using internal XML-RPC implementation.])
+  BTG_INTERNAL_XMLRPC=1
+  AM_CONDITIONAL(BUILDINTERNALXMLRPC, true)
+else
+  AC_MSG_NOTICE([Using system XML-RPC implementation (jay!).])
+  BTG_INTERNAL_XMLRPC=0
+  AM_CONDITIONAL(BUILDINTERNALXMLRPC, false)
+fi
+
+AC_SUBST(BTG_INTERNAL_XMLRPC)
+
 dnl actually for tests
 AC_CHECK_FUNCS([semop semtimedop])
 
